--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,70 @@
     </section>
     <!-- /END About Section -->
 
+      <!-- Notice: each .row is a project -->
+      <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <div class="project-wrapper__text load-hidden">
+            <h3 class="project-wrapper__text-title">
+            My 3D Potfolio Project
+            </h3>
+            <div>
+              <p class="mb-4">
+                <span class="text-color-main">Note : Do not load of mobile phone</span></br>
+                <span class="text-color-main">React</span>,
+                <span class="text-color-main">Redux</span> for state
+                management,
+                <span class="text-color-main">Firebase Firestore</span> as
+                database, and
+                <span class="text-color-main">Stripe API</span> for
+                accepting payments.
+              </p>
+            
+            </div>
+            <a
+              rel="noreferrer"
+              target="_blank"
+              class="cta-btn cta-btn--hero"
+              href="https://folio-client-blue.vercel.app/"
+            >
+              See Live
+            </a>
+            <a
+              rel="noreferrer"
+              target="_blank"
+              class="cta-btn text-color-main"
+              href="https://github.com/PatrickEinstein/"
+            >
+              Source Code
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-8 col-sm-12">
+          <div class="project-wrapper__image load-hidden">
+            <a
+              rel="noreferrer"
+              href="https://folio-client-blue.vercel.app/"
+              target="_blank"
+            >
+              <div
+                data-tilt
+                data-tilt-max="4"
+                data-tilt-glare="true"
+                data-tilt-max-glare="0.5"
+                class="thumbnail rounded js-tilt"
+              >
+                <img
+                  alt="Project Image"
+                  class="img-fluid"
+                  src="assets/3dfolio.png"
+                />
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- /END Project -->
+
     <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
@@ -119,7 +183,7 @@
                 </h3>
                 <div>
                   <p class="mb-4">
-                    A Fullstack Investment Project
+                    A Fullstack social media website Project
                     <span class="text-color-main">React</span>,
                     <span class="text-color-main">Redux</span> for state
                     management,
@@ -306,6 +370,138 @@
               </div>
             </div>
           </div>
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">
+                  Export Readiness Dashboard
+                </h3>
+                <div>
+                  <p class="mb-4">
+                    Built complete E-commerce website for a clothing store using
+                    <span class="text-color-main">React</span>,
+                    <span class="text-color-main">Redux</span> for state
+                    management,
+                    <span class="text-color-main">Firebase Firestore</span> as
+                    database, and
+                    <span class="text-color-main">Stripe API</span> for
+                    accepting payments.
+                  </p>
+                  <span class="text-color-main">Whatsapp social media</span> for
+                    live chat.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://erp-dash.vercel.app/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/PatrickEinstein/"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://erp-dash.vercel.app/"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/erpdash.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+                    <!-- Notice: each .row is a project -->
+                    <div class="row">
+                      <div class="col-lg-4 col-sm-12">
+                        <div class="project-wrapper__text load-hidden">
+                          <h3 class="project-wrapper__text-title">
+                            Export Readiness Dashboard
+                          </h3>
+                          <div>
+                            <p class="mb-4">
+                              Built complete E-commerce website for a clothing store using
+                              <span class="text-color-main">React</span>,
+                              <span class="text-color-main">Redux</span> for state
+                              management,
+                              <span class="text-color-main">Firebase Firestore</span> as
+                              database, and
+                              <span class="text-color-main">Stripe API</span> for
+                              accepting payments.
+                            </p>
+                            <span class="text-color-main">Whatsapp social media</span> for
+                              live chat.
+                            </p>
+                          </div>
+                          <a
+                            rel="noreferrer"
+                            target="_blank"
+                            class="cta-btn cta-btn--hero"
+                            href="https://erp-client-ashy.vercel.app/"
+                          >
+                            See Live
+                          </a>
+                          <a
+                            rel="noreferrer"
+                            target="_blank"
+                            class="cta-btn text-color-main"
+                            href="https://github.com/PatrickEinstein/"
+                          >
+                            Source Code
+                          </a>
+                        </div>
+                      </div>
+                      <div class="col-lg-8 col-sm-12">
+                        <div class="project-wrapper__image load-hidden">
+                          <a
+                            rel="noreferrer"
+                            href="https://erp-client-ashy.vercel.app/"
+                            target="_blank"
+                          >
+                            <div
+                              data-tilt
+                              data-tilt-max="4"
+                              data-tilt-glare="true"
+                              data-tilt-max-glare="0.5"
+                              class="thumbnail rounded js-tilt"
+                            >
+                              <img
+                                alt="Project Image"
+                                class="img-fluid"
+                                src="assets/erpClient.png"
+                              />
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- /END Project -->
 
            <!-- Notice: each .row is a project -->
           <div class="row">
