--- a/src/index.html
+++ b/src/index.html
@@ -106,8 +106,17 @@
 
      
     <section id="projects">
- <!-- Notice: each .row is a project -->
- <div class="row">
+
+ 
+
+<!-- **** Projects Section **** -->
+
+      <div class="container">
+        <div class="project-wrapper">
+          <h2 class="section-title dark-blue-text">Projects</h2>
+
+<!-- Notice: each .row is a project -->
+<div class="row">
   <div class="col-lg-4 col-sm-12">
     <div class="project-wrapper__text load-hidden">
       <h3 class="project-wrapper__text-title">
@@ -169,12 +178,70 @@
   </div>
 </div>
 <!-- /END Project -->
+<!-- Notice: each .row is a project -->
+<div class="row">
+  <div class="col-lg-4 col-sm-12">
+    <div class="project-wrapper__text load-hidden">
+      <h3 class="project-wrapper__text-title">
+        Talkcity
+       </h3>
+      <div>
+        <p class="mb-4">
+          <span class="text-color-main">Note : Do not load of mobile phone</span></br>
+          <span class="text-color-main">React</span>,
+          <span class="text-color-main">Redux</span> for state
+          management,
+          <span class="text-color-main">Firebase Firestore</span> as
+          database, and
+          <span class="text-color-main">Stripe API</span> for
+          accepting payments.
+        </p>
+      
+      </div>
+      <a
+        rel="noreferrer"
+        target="_blank"
+        class="cta-btn cta-btn--hero"
+        href="https://patstack.vercel.app/dashboard"
+      >
+        See Live
+      </a>
+      <a
+        rel="noreferrer"
+        target="_blank"
+        class="cta-btn text-color-main"
+        href="https://github.com/PatrickEinstein/"
+      >
+        Source Code
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-8 col-sm-12">
+    <div class="project-wrapper__image load-hidden">
+      <a
+        rel="noreferrer"
+        href="https://patstack.vercel.app/dashboard"
+        target="_blank"
+      >
+        <div
+          data-tilt
+          data-tilt-max="4"
+          data-tilt-glare="true"
+          data-tilt-max-glare="0.5"
+          class="thumbnail rounded js-tilt"
+        >
+          <img
+            alt="Project Image"
+            class="img-fluid"
+            src="assets/patDash.png"
+          />
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
+<!-- /END Project -->
 
-<!-- **** Projects Section **** -->
-
-      <div class="container">
-        <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
 
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -241,8 +308,6 @@
               </div>
             </div>
           </div>
-
-
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
