--- a/src/index.html
+++ b/src/index.html
@@ -178,6 +178,8 @@
   </div>
 </div>
 <!-- /END Project -->
+
+
 <!-- Notice: each .row is a project -->
 <div class="row">
   <div class="col-lg-4 col-sm-12">
@@ -233,7 +235,7 @@
           <img
             alt="Project Image"
             class="img-fluid"
-            src="assets/patDash.png"
+            src="assets/PatDash.png"
           />
         </div>
       </a>
