--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
   <div class="col-lg-4 col-sm-12">
     <div class="project-wrapper__text load-hidden">
       <h3 class="project-wrapper__text-title">
-        Talkcity
+        My 3D Potfolio 
        </h3>
       <div>
         <p class="mb-4">
@@ -185,7 +185,7 @@
   <div class="col-lg-4 col-sm-12">
     <div class="project-wrapper__text load-hidden">
       <h3 class="project-wrapper__text-title">
-        Talkcity
+        Fullstack Data Analytics Dashboard
        </h3>
       <div>
         <p class="mb-4">
@@ -251,7 +251,7 @@
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">
-                 Talkcity
+                 Talkcity Social Media
                 </h3>
                 <div>
                   <p class="mb-4">
@@ -316,7 +316,7 @@
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">
-                  Retro Pay investment Website
+                  Vote-verse Platform
                 </h3>
                 <div>
                   <p class="mb-4">
