--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a Fullstack web developer with 2+ years in building scalable web
+                I am a Fullstack web developer with 3+ years in building scalable web
                 applications using HTML, CSS, JavaScript, React.js, next.js, and
                 TypeScript, Nodejs MongoDB, SQL and Firebase. I also have experience in managing state using both
                 Context API and Redux, consuming API using both fetch API and
@@ -131,7 +131,9 @@
           <span class="text-color-main">Firebase Firestore</span> as
           database, and
           <span class="text-color-main">Stripe API</span> for
-          accepting payments.
+          accepting payments. click the
+          <span class="text-color-main"> See Live button, navigate to the contact form and send me a message</span> 
+         
         </p>
       
       </div>
