--- a/src/index.html
+++ b/src/index.html
@@ -128,10 +128,9 @@
           <span class="text-color-main">React</span>,
           <span class="text-color-main">Redux</span> for state
           management,
-          <span class="text-color-main">Firebase Firestore</span> as
-          database, and
-          <span class="text-color-main">Stripe API</span> for
-          accepting payments. click the
+          <span class="text-color-main">Mongo DB</span> as
+          database
+          <span class="text-color-main">Node js and Express</span> server side language
           <span class="text-color-main"> See Live button, navigate to the contact form and send me a message</span> 
          
         </p>
@@ -192,13 +191,12 @@
       <div>
         <p class="mb-4">
           <span class="text-color-main">Note : Do not load of mobile phone</span></br>
-          <span class="text-color-main">React</span>,
+          <span class="text-color-main">This is a data analytics dashboard</span> Everydata in each section is derived from my remote server
           <span class="text-color-main">Redux</span> for state
           management,
-          <span class="text-color-main">Firebase Firestore</span> as
+          <span class="text-color-main">Mongo DB</span> as
           database, and
-          <span class="text-color-main">Stripe API</span> for
-          accepting payments.
+          <span class="text-color-main">Node js and express</span> as backend language
         </p>
       
       </div>
