--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,75 @@
   </div>
 </div>
 <!-- /END Project -->
+ <!-- Notice: each .row is a project -->
+ <div class="row">
+  <div class="col-lg-4 col-sm-12">
+    <div class="project-wrapper__text load-hidden">
+      <h3 class="project-wrapper__text-title">
+       Pizza Recipe Application
+      </h3>
+      <div>
+        <p class="mb-4">
+          A Fullstack Recipe app  mobile application that can be controlled remotely from an admin dashboard
+          <span class="text-color-main">React Native</span>,
+          <span class="text-color-main">Redux</span> for state
+          management,
+          <span class="text-color-main">Cloudinary</span> for Image upload,
+          <span class="text-color-main">Nodejs and Express js</span> as
+          backend, and
+          <span class="text-color-main">MongoDB </span> for
+          Database.
+        </p>
+        It comes with signin and login authentication authentication 
+       contents can be  <span class="text-color-main">Created</span>,
+       <span class="text-color-main">Retrieved </span> 
+       <span class="text-color-main">Edited</span> and 
+       <span class="text-color-main">Deleted </span> from the remote web admin dashboard
+      </div>
+      <a
+        rel="noreferrer"
+        target="_blank"
+        class="cta-btn cta-btn--hero"
+        <!-- href="https://talkcity.vercel.app/" -->
+      >
+        See Live
+      </a>
+      <a
+        rel="noreferrer"
+        target="_blank"
+        class="cta-btn text-color-main"
+        href="https://github.com/PatrickEinstein/"
+      >
+        Source Code
+      </a>
+    </div>
+  </div>
+  <div class="col-lg-8 col-sm-12">
+    <div class="project-wrapper__image load-hidden">
+      <a
+        rel="noreferrer"
+        <!-- href="https://talkcity.vercel.app/" -->
+        target="_blank"
+      >
+        <div
+          data-tilt
+          data-tilt-max="4"
+          data-tilt-glare="true"
+          data-tilt-max-glare="0.5"
+          class="thumbnail rounded js-tilt"
+        >
+          <img
+            alt="Project Image"
+            class="img-fluid"
+            src="assets/pizzmix.png"
+          />
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
 
+<!-- END  -->
 
 
           <!-- Notice: each .row is a project -->
