--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
           <span class="text-color-main">Mongo DB</span> as
           database
           <span class="text-color-main">Node js and Express</span> server side language
-          <span class="text-color-main"> See Live button, navigate to the contact form and send me a message</span> 
+          <span class="text-color-main">click the  "See Live button", navigate to the contact form and send me a message</span> 
          
         </p>
       
