--- a/src/index.html
+++ b/src/index.html
@@ -252,8 +252,8 @@
       </h3>
       <div>
         <p class="mb-4">
-          A Fullstack Recipe app  mobile application that can be controlled remotely from an admin dashboard
-          <span class="text-color-main">React Native</span>,
+          A Fullstack Recipe app  mobile application that can be controlled remotely from a web admin dashboard.
+          <span class="text-color-main"> Built with React Native</span>,
           <span class="text-color-main">Redux</span> for state
           management,
           <span class="text-color-main">Cloudinary</span> for Image upload,
@@ -261,12 +261,13 @@
           backend, and
           <span class="text-color-main">MongoDB </span> for
           Database.
+          It comes with signin and login authentication authentication 
+          contents can be  <span class="text-color-main">Created</span>,
+          <span class="text-color-main">Retrieved </span> 
+          <span class="text-color-main">Edited</span> and 
+          <span class="text-color-main">Deleted </span> from the remote web admin dashboard
         </p>
-        It comes with signin and login authentication authentication 
-       contents can be  <span class="text-color-main">Created</span>,
-       <span class="text-color-main">Retrieved </span> 
-       <span class="text-color-main">Edited</span> and 
-       <span class="text-color-main">Deleted </span> from the remote web admin dashboard
+       
       </div>
       <a
         rel="noreferrer"
