--- a/src/index.html
+++ b/src/index.html
@@ -273,7 +273,7 @@
         rel="noreferrer"
         target="_blank"
         class="cta-btn cta-btn--hero"
-        <!-- href="https://talkcity.vercel.app/" -->
+        href="https://expo.dev/accounts/patrickeinstein/projects/pizzaapp/builds/513cbfe8-e8fc-454a-8d5a-38fa70c46325"
       >
         See Live
       </a>
@@ -291,7 +291,7 @@
     <div class="project-wrapper__image load-hidden">
       <a
         rel="noreferrer"
-        <!-- href="https://talkcity.vercel.app/" -->
+        href="https://expo.dev/accounts/patrickeinstein/projects/pizzaapp/builds/513cbfe8-e8fc-454a-8d5a-38fa70c46325"
         target="_blank"
       >
         <div
