--- a/src/index.html
+++ b/src/index.html
@@ -521,6 +521,7 @@
                   <p class="mb-4">
                     A Fullstack social media website Project
                     <span class="text-color-main">React</span>,
+                    <span class="text-color-main">Material Ui</span>,
                     <span class="text-color-main">Redux</span> for state
                     management,
                     <span class="text-color-main">Cloudinary</span> for Image upload,
@@ -585,18 +586,18 @@
                 </h3>
                 <div>
                   <p class="mb-4">
-                    Built complete E-commerce website for a clothing store using
+                    A Fullstack social media website Project
                     <span class="text-color-main">React</span>,
+                    <span class="text-color-main">Material Ui</span>,
                     <span class="text-color-main">Redux</span> for state
                     management,
-                    <span class="text-color-main">Firebase Firestore</span> as
-                    database, and
-                    <span class="text-color-main">Stripe API</span> for
-                    accepting payments.
+                    <span class="text-color-main">Cloudinary</span> for Image upload,
+                    <span class="text-color-main">Nodejs and Express js</span> as
+                    backend, and
+                    <span class="text-color-main">MongoDB </span> for
+                    Database.
                   </p>
-                  <span class="text-color-main">Whatsapp social media</span> for
-                    live chat.
-                  </p>
+                  
                 </div>
                 <a
                   rel="noreferrer"
@@ -651,18 +652,18 @@
                           </h3>
                           <div>
                             <p class="mb-4">
-                              Built complete E-commerce website for a clothing store using
+                              A Fullstack social media website Project
                               <span class="text-color-main">React</span>,
+                              <span class="text-color-main">Material Ui</span>,
                               <span class="text-color-main">Redux</span> for state
                               management,
-                              <span class="text-color-main">Firebase Firestore</span> as
-                              database, and
-                              <span class="text-color-main">Stripe API</span> for
-                              accepting payments.
+                              <span class="text-color-main">Cloudinary</span> for Image upload,
+                              <span class="text-color-main">Nodejs and Express js</span> as
+                              backend, and
+                              <span class="text-color-main">MongoDB </span> for
+                              Database.
                             </p>
-                            <span class="text-color-main">Whatsapp social media</span> for
-                              live chat.
-                            </p>
+                           
                           </div>
                           <a
                             rel="noreferrer"
