--- a/src/index.html
+++ b/src/index.html
@@ -254,8 +254,9 @@
       </h3>
       <div>
         <p class="mb-4">
-          A Fullstack Dashboard for users to create album and store their memories in form of pictures and events.
-          They can also use ot for commercial purposes by creating courses, products and other items
+          A complete CRUD Fullstack Dashboard for users to create album and store their memories in form of pictures and events.
+          They can also use ot for commercial purposes by creating courses, products and other items.
+          By cicking on any item, you can edit the details, update them and even delete them
           <span class="text-color-main"> Built with React </span>,
           <span class="text-color-main">Redux</span> for state
           management,
