retro link change

--- a/src/index.html
+++ b/src/index.html
@@ -256,7 +256,8 @@
         <p class="mb-4">
           A complete CRUD Fullstack Dashboard for users to create album and store their memories in form of pictures and events.
           They can also use ot for commercial purposes by creating courses, products and other items.
-          By cicking on any item, you can edit the details, update them and even delete them
+          By cicking on any item, you can edit the details, update them and even delete them,
+          Not for Mobile
           <span class="text-color-main"> Built with React </span>,
           <span class="text-color-main">Redux</span> for state
           management,
@@ -545,7 +546,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://www.retropay.uk/"
+                  href="https://retro-clients.vercel.app/"
                 >
                   See Live
                 </a>
