--- a/src/index.html
+++ b/src/index.html
@@ -564,7 +564,7 @@
               <div class="project-wrapper__image load-hidden">
                 <a
                   rel="noreferrer"
-                  href="https://www.retropay.uk/"
+                  href="https://retro-clients.vercel.app/"
                   target="_blank"
                 >
                   <div
